--- a/src/Views/Answers/Index.cshtml
+++ b/src/Views/Answers/Index.cshtml
@@ -6,6 +6,7 @@
 
 <div class="d-flex flex-column mb-2">
     <form class="form-inline d-flex justify-content-start">
+        <input type="hidden" name="courseId" value="@ViewBag.CourseId" />
         <div class="d-flex mr-2">
             <label class="control-label mr-1">Выберите тест: </label>
             <select name="TestId" class="form-control">
