--- a/src/Views/Course/Details.cshtml
+++ b/src/Views/Course/Details.cshtml
@@ -22,10 +22,11 @@
         @if (User.IsInRole("teacher"))
         {
             <form class="mr-3" method="get">
-                <input name="CourseId" class="hide disabled invisible" type="hidden" value="@Model.CourseId" />
+                <input name="CourseId" type="hidden" value="@Model.CourseId" />
                 <input type="submit" asp-action="Create" asp-controller="Tests" class="btn btn-primary" value="Добавить тест" />
             </form>
             <form method="get">
+                <input name="courseId" type="hidden" value="@Model.CourseId" />
                 <input type="submit" asp-action="Index" asp-controller="Answers" class="btn btn-primary" value="Ответы студентов" />
             </form>
         }
@@ -94,7 +95,7 @@
                         </form>
                     </td>
                 }
-                @if (User.IsInRole("student"))
+                @if (User.IsInRole("student") && (t.Date.CompareTo(DateTime.Now) < 0) && (t.ExpirationDate.CompareTo(DateTime.Now) > 0))
                 {
                     <td>
                         <form method="get">
