--- a/src/Views/Tests/Details.cshtml
+++ b/src/Views/Tests/Details.cshtml
@@ -23,6 +23,9 @@
                 Редактировать
             </th>
             <th>
+                Подробнее
+            </th>
+            <th>
                 Удалить вопрос
             </th>
         </tr>
