--- a/src/Views/Course/Details.cshtml
+++ b/src/Views/Course/Details.cshtml
@@ -69,42 +69,53 @@
         </tr>
         @foreach (Test t in Model.Tests)
         {
-            <tr>
-                <td>@t.Name</td>
-                <td>@t.Description</td>
-                <td>@t.Date</td>
-                <td>@t.ExpirationDate</td>
-                @if (User.IsInRole("teacher") && (t.Date.CompareTo(DateTime.Now) > 0) || (t.ExpirationDate.CompareTo(DateTime.Now) < 0))
-                {
-                    <td>
-                        <form method="get">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
-                            <input type="submit" asp-action="Update" asp-controller="Tests" class="btn btn-info" value="Редактировать" />
-                        </form>
-                    </td>
-                    <td>
-                        <form method="get">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
-                            <input type="submit" asp-action="Details" asp-controller="Tests" class="btn btn-info" value="Подробнее" />
-                        </form>
-                    </td>
-                    <td>
-                        <form method="post">
-                            <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
-                            <input type="submit" asp-action="Delete" asp-controller="Tests" class="btn btn-danger" value="Удалить" />
-                        </form>
-                    </td>
-                }
-                @if (User.IsInRole("student") && (t.Date.CompareTo(DateTime.Now) < 0) && (t.ExpirationDate.CompareTo(DateTime.Now) > 0))
-                {
-                    <td>
-                        <form method="get">
-                            <input name="testId" class="hide disabled invisible" type="hidden" value="@t.Id" />
-                            <input type="submit" asp-action="Pass" asp-controller="Tests" class="btn btn-success" value="Пройти тест" />
-                        </form>
-                    </td>
-                }
-            </tr>
+    <tr>
+        <td>@t.Name</td>
+        <td>@t.Description</td>
+        <td>@t.Date</td>
+        <td>@t.ExpirationDate</td>
+        @if (User.IsInRole("teacher") && (t.Date.CompareTo(DateTime.Now) > 0) || (t.ExpirationDate.CompareTo(DateTime.Now) < 0))
+        {
+            <td>
+                <form method="get">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                    <input type="submit" asp-action="Update" asp-controller="Tests" class="btn btn-info" value="Редактировать" />
+                </form>
+            </td>
+            <td>
+                <form method="get">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                    <input type="submit" asp-action="Details" asp-controller="Tests" class="btn btn-info" value="Подробнее" />
+                </form>
+            </td>
+            <td>
+                <form method="post">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                    <input type="submit" asp-action="Delete" asp-controller="Tests" class="btn btn-danger" value="Удалить" />
+                </form>
+            </td>
+        }
+        else if (User.IsInRole("teacher"))
+        {
+            <td></td>
+            <td></td>
+            <td>
+                <form method="post">
+                    <input name="id" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                    <input type="submit" asp-action="Delete" asp-controller="Tests" class="btn btn-danger" value="Удалить" />
+                </form>
+            </td>
+        }
+        @if (User.IsInRole("student") && (t.Date.CompareTo(DateTime.Now) < 0) && (t.ExpirationDate.CompareTo(DateTime.Now) > 0))
+        {
+            <td>
+                <form method="get">
+                    <input name="testId" class="hide disabled invisible" type="hidden" value="@t.Id" />
+                    <input type="submit" asp-action="Pass" asp-controller="Tests" class="btn btn-success" value="Пройти тест" />
+                </form>
+            </td>
+        }
+    </tr>
         }
     </table>
     @if (User.IsInRole("student"))
