--- a/src/Views/Tests/Details.cshtml
+++ b/src/Views/Tests/Details.cshtml
@@ -13,8 +13,7 @@
         <input name="TestId" class="hide disabled invisible" type="hidden" value="@Model.Id" />
         <input type="submit" asp-action="Create" asp-controller="Questions" class="btn btn-primary" value="Добавить вопрос" />
     </form>
-        
-    
+
     <table border="1" bordercolor="#dee2e6" class="table">
         <tr>
         <tr>
@@ -29,29 +28,35 @@
                 Удалить вопрос
             </th>
         </tr>
-            @foreach (Question q in Model.Questions)
-            {
-    <tr>
-        <td>@q.Text</td>
-        <td>
-            <form method="get">
-                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
-                <input type="submit" asp-action="Update" asp-controller="Questions" class="btn btn-info" value="Редактировать" />
-            </form>
-        </td>
-        <td>
-            <form method="get">
-                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
-                <input type="submit" asp-action="Details" asp-controller="Questions" class="btn btn-info" value="Подробнее" />
-            </form>
-        </td>
-        <td>
-            <form method="post">
-                <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
-                <input type="submit" asp-action="Delete" asp-controller="Questions" class="btn btn-danger" value="Удалить" />
-            </form>
-        </td>
-    </tr>
-            }
+        @foreach (Question q in Model.Questions)
+        {
+            <tr>
+                <td>@q.Text</td>
+                <td>
+                    <form method="get">
+                        <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                        <input type="submit" asp-action="Update" asp-controller="Questions" class="btn btn-info" value="Редактировать" />
+                    </form>
+                </td>
+                <td>
+                    <form method="get">
+                        <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                        <input type="submit" asp-action="Details" asp-controller="Questions" class="btn btn-info" value="Подробнее" />
+                    </form>
+                </td>
+                <td>
+                    <form method="post">
+                        <input name="id" class="hide disabled invisible" type="hidden" value="@q.Id" />
+                        <input type="submit" asp-action="Delete" asp-controller="Questions" class="btn btn-danger" value="Удалить" />
+                    </form>
+                </td>
+            </tr>
+        }
     </table>
+</div>
+<div>
+    <form asp-action="Details" asp-controller="Course" method="get">
+        <input name="id" type="hidden" value="@Model.Course.Id" />
+        <input type="submit" value="Вернуться к курсу" class="btn-link border-0 bg-white" />
+    </form>
 </div>
