--- a/src/Views/Tests/Pass.cshtml
+++ b/src/Views/Tests/Pass.cshtml
@@ -8,10 +8,10 @@
 
 <form method="post" asp-action="Pass">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input name="attemptId" type="hidden" value="@ViewBag.attemptId"/>
     @foreach (var answer in Model.Answers)
     {
         <div class="form-row align-items-center">
-            
             <input asp-for="Id" type="radio" value="@answer.Id" />
             <span class="ml-2 h5">@answer.Text</span>
             <span asp-validation-for="Id" class="text-danger"></span>
