--- a/src/Views/Tests/Update.cshtml
+++ b/src/Views/Tests/Update.cshtml
@@ -33,6 +33,11 @@
                 <input asp-for="ExpirationDate" class="form-control" />
                 <span asp-validation-for="ExpirationDate" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="AttemptCount" class="control-label">Количество попыток</label>
+                <input asp-for="AttemptCount" class="form-control" />
+                <span asp-validation-for="AttemptCount" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="CourseId" value="@Model.CourseId" />
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
