deleted useless validations

--- a/src/Views/Account/Index.cshtml
+++ b/src/Views/Account/Index.cshtml
@@ -26,7 +26,7 @@
                     <option value="0">Все</option>
                     @foreach (Group g in ViewBag.Groups)
                     {
-                        <option value="@g.Id">@g.Name</option>
+                        <option value="@g.Id">@g.Code</option>
                     }
                 </select>
             </div>
