--- a/src/Views/Questions/Details.cshtml
+++ b/src/Views/Questions/Details.cshtml
@@ -8,11 +8,10 @@
 
     <span class="mt-3">Вопрос: @Html.DisplayFor(model => model.Text)</span>
     <form method="get" class="mb-3">
-        <input name="QuestionId" class="hide disabled invisible" type="hidden" value="@Model.Id" />
+        <input name="QuestionId" type="hidden" value="@Model.Id" />
         <input type="submit" asp-action="Create" asp-controller="Answers" class="btn btn-primary" value="Добавить ответ на вопрос" />
     </form>
         
-    
     <table border="1" bordercolor="#dee2e6" class="table">
         <tr>
         <tr>
