--- a/src/Views/Tests/Create.cshtml
+++ b/src/Views/Tests/Create.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Название теста</label>
@@ -53,7 +53,3 @@
         <input type="submit" value="Вернуться к курсу" class="btn-link border-0 bg-white" />
     </form>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
